feat: criado componente de Botao-Retrair-Menu

--- a/src/app/pages/privado/cabecalho/cabecalho.component.html
+++ b/src/app/pages/privado/cabecalho/cabecalho.component.html
@@ -1,3 +1,6 @@
 <div class="container-cabecalho">
-  <h1>Aqui vai ser o cabeçalho</h1>
+  <app-botao-retrair-menu></app-botao-retrair-menu>
+  <div class="centro-cabecalho">
+    <h1>Aqui vai ser o cabeçalho</h1>
+  </div>
 </div>
