--- a/src/app/pages/privado/cabecalho/cabecalho.component.css
+++ b/src/app/pages/privado/cabecalho/cabecalho.component.css
@@ -1,3 +1,20 @@
 .container-cabecalho {
-  border: 2px solid green;
+  display: flex;
+  align-items: center;
+  height: 70px;
+  width: 100%;
+}
+
+.centro-cabecalho {
+  border: 1px solid red;
+  background: rgb(214, 250, 250);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+h1 {
+  margin: 0;
 }
